Deployment/kubernetes/angularui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: angularui
    namespace: jenkins
    labels:
        app: angularui
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: angularui
    template:
        metadata:
            labels:
                app: angularui
        spec:
            containers:
              - name: angularui
                image: skybolt83/angularui
                ports:
                  - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: angularui-service
    namespace: jenkins
spec:
    selector:
        app: angularui     
    ports: 
      - protocol: "TCP"
        port: 4200
        targetPort: 80
