Deployment/kubernetes/authenticationservice-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
    serviceName: "authentication-service"
    replicas: 1
    selector: 
        matchLabels:
            app: authentication-service
    template:
        metadata:
            labels:
                app: authentication-service
        spec:
            containers:
              - name: authentication-service
                image: skybolt83/oauth2_jwt_authorization_server
                ports:
                  - containerPort: 4800
                livenessProbe:
                    httpGet:
                        path: /actuator/health
                        port: 4800
                        scheme: HTTPS
                    initialDelaySeconds: 60
                    periodSeconds: 20
                readinessProbe:
                    httpGet:
                        path: /actuator/health
                        port: 4800
                        scheme: HTTPS
                    initialDelaySeconds: 60
                    periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
    name: authentication-service
spec:
    selector:
        app: authentication-service
    ports:
    - protocol: "TCP"
      port: 4800
      targetPort: 4800
