Deployment/kubernetes/configserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: configserver
    labels:
        app: configserver
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: configuration-server
    template:
        metadata:
            labels:
                app: configuration-server
        spec:
            containers:
              - name: configuration-server
                image: skybolt83/configserver
                ports:
                  - containerPort: 8888
                livenessProbe:
                    httpGet:
                        path: /actuator/health
                        port: 8888
                    initialDelaySeconds: 60
                    periodSeconds: 20
                readinessProbe:
                    httpGet:
                        path: /actuator/health
                        port: 8888
                    initialDelaySeconds: 60
                    periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
    name: configuration-server
spec:
    selector:
        app: configuration-server
    ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
