Deployment/kubernetes/gatewayserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: gateway-server
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
        containers:
          - name: gateway-server
            image: "skybolt83/gatewayserver"
            ports:
               - containerPort: 5555
            livenessProbe:
                httpGet:
                    path: /actuator/health
                    port: 5555
                    scheme: HTTPS
                initialDelaySeconds: 60
                periodSeconds: 20
            readinessProbe:
                httpGet:
                    path: /actuator/health
                    port: 5555
                    scheme: HTTPS
                initialDelaySeconds: 60
                periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  namespace: jenkins
spec:
  selector:
    app: gateway-server
  ports:
  - protocol: "TCP"
    port: 5555
    targetPort: 5555
