Deployment/kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: jenkins
  labels:
    app: mongodb
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: pv-data
          mountPath: /var/lib/mongo/data
        - name: mongo-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: pv-data
        persistentVolumeClaim:
          claimName: mongo-pvc-claim
      - name: mongo-initdb
        configMap:
          name: mongo-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: jenkins
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
