Deployment/kubernetes/redisserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redisserver
    labels:
        app: redisserver
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: redisserver
    template:
        metadata:
            labels:
                app: redisserver
        spec:
            containers:
              - name: redisserver
                image: redis:alpine
                ports:
                  - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
    name: redisserver
spec:
    selector:
        app: redisserver
    ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
