Deployment/kubernetes/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
    serviceName: "zookeeper"
    replicas: 1
    selector: 
        matchLabels:
            app: zookeeper
    template:
        metadata:
            labels:
                app: zookeeper
        spec:
            containers:
              - name: zookeeper
                image: wurstmeister/zookeeper:latest
                ports:
                  - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
    name: zookeeper
spec:
    clusterIP: None
    selector:
        app: zookeeper
    ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
