Deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cronoweb
  namespace: jenkins
  annotations:
    nginx.org/ssl-services: "ssl-svc"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - example.com
    secretName: secret-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angularui-service
            port:
              number: 4200
